Fixed Responsiveness, refactored title, context path and application key

--- a/widget/gp-lib-processing-widget.component.css
+++ b/widget/gp-lib-processing-widget.component.css
@@ -1,89 +1,97 @@
+.status-completed {
+  background-color: #3FC380;
+}
 
+.status-inProces {
+  background-color: rgb(241, 243, 108);
+}
 
- .status-completed{
-    background-color: #3FC380;
-  }
-  .status-inProces
-  {
-    background-color: rgb(241, 243, 108);
-  }
-  .status-default{
-    background-color: #ababab;
-  }
-  .header1sub2{
-    display: flex;
-    padding: 10px;
-  }
-  
-  .process-arrow-inprocess{
-    background-image: linear-gradient(to right, #3FC380 , rgb(241, 243, 108));
-  }
-  .process-arrow-done{
-   background-color: #3FC380;
-  }
-  .process-arrow-default{
-    background-color: #eee;
-  }
-  .process-div{
-    display: flex; 
-    flex-wrap: wrap; 
-    width:80%; 
-    justify-content: center; 
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .single-process-div{
-    flex:1
-  }
-  .content-div{
-    display: flex; 
-    position: relative;
-  }
-  .process-connecting-div{
-    height: 4px;
-    position: absolute; 
-    top: 50%; 
-    left: 56px; 
-    right: 0px;
-  }
-  .heading-text{
-    font-size: 14px; 
-    font-weight: 500;
-  }
-  .stepper-box-shadow {
-    box-shadow: 0 3px 5px -1px rgb(0 0 0 / 20%), 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%);
-  }
-  .stepper-button {
-    color: #fff;
-    box-sizing: border-box;
-    position: relative;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: pointer;
-    outline: 0;
-    border: none;
-    -webkit-tap-highlight-color: transparent;
-    display: inline-block;
-    white-space: nowrap;
-    text-decoration: none;
-    vertical-align: baseline;
-    text-align: center;
-    margin: 0;
-    min-width: 64px;
-    line-height: 15px;
-    padding: 0 16px;
-    border-radius: 4px;
-    overflow: visible;
-    transform: translate3d(0,0,0);
-    transition: background .4s cubic-bezier(.25,.8,.25,1),box-shadow 280ms cubic-bezier(.4,0,.2,1);
-    min-width: 0;
-    border-radius: 50%;
-    width: 56px;
-    height: 56px;
-    padding: 0;
-    flex-shrink: 0;
-  }
-  
+.status-default {
+  background-color: #ababab;
+}
+
+.header1sub2 {
+  display: flex;
+  padding: 10px;
+}
+
+.process-arrow-inprocess {
+  background-image: linear-gradient(to right, #3FC380, rgb(241, 243, 108));
+}
+
+.process-arrow-done {
+  background-color: #3FC380;
+}
+
+.process-arrow-default {
+  background-color: #eee;
+}
+
+.process-div {
+  display: flex;
+  flex-wrap: wrap;
+  width: 80%;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.single-process-div {
+  flex: 1
+}
+
+.content-div {
+  display: flex;
+  position: relative;
+}
+
+.process-connecting-div {
+  height: 4px;
+  position: absolute;
+  top: 50%;
+  left: 56px;
+  right: 0px;
+}
+
+.heading-text {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.stepper-box-shadow {
+  box-shadow: 0 3px 5px -1px rgb(0 0 0 / 20%), 0 6px 10px 0 rgb(0 0 0 / 14%), 0 1px 18px 0 rgb(0 0 0 / 12%);
+}
+
+.stepper-button {
+  color: #fff;
+  box-sizing: border-box;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  outline: 0;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
+  display: inline-block;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: baseline;
+  text-align: center;
+  margin: 0;
+  min-width: 64px;
+  line-height: 15px;
+  padding: 0 16px;
+  border-radius: 4px;
+  overflow: visible;
+  transform: translate3d(0, 0, 0);
+  transition: background .4s cubic-bezier(.25, .8, .25, 1), box-shadow 280ms cubic-bezier(.4, 0, .2, 1);
+  min-width: 0;
+  border-radius: 50%;
+  width: 56px;
+  height: 56px;
+  padding: 0;
+  flex-shrink: 0;
+}
