--- a/widget/gp-lib-processing-widget-config.component.html
+++ b/widget/gp-lib-processing-widget-config.component.html
@@ -1,26 +1,28 @@
 <div class="form-group">
 
-  <div style="display: flex;">
-    <div style="flex-grow:1 ; margin-right: 5px;">
+  <div class="row col-sm-12">
+    <div class="col-sm-6 col-md-6">
       <label translate>Event Type</label>
-      <input class="form-control" style="width: 100%" type="text" name="config.indoorEventType"
+      <input class=" form-control" style="width: 100%" type="text" name="config.indoorEventType"
         [(ngModel)]="config.indoorEventType" />
     </div>
-    <div style=" flex-grow: 1; margin-right: 5px;">
+    <div class="col-sm-6 col-md-6">
       <label translate>Field Name</label>
       <input class="form-control" style="width: 100%" type="text" name="config.fieldName"
         [(ngModel)]="config.fieldName" />
     </div>
+  </div>
+  <br>
 
-  </div><br>
-  <div class="process-input" *ngIf="dataLoaded | async">
-    <table mat-table [dataSource]="config.dataSource" class="mat-elevation-z8 table-card">
+  <div class="process-input  mat-elevation-z8" *ngIf="dataLoaded | async">
+    <table mat-table [dataSource]="config.dataSource" class="processingTable" [class.isMobile]="isMobile">
 
       <!-- Display Status Column -->
       <ng-container matColumnDef="displayStatus">
         <th mat-header-cell *matHeaderCellDef> Display Status </th>
         <td mat-cell *matCellDef="let element">
-          <input type="text" class="form-control" name="displayStatus"  [(ngModel)]="element.displayStatus"/>
+          <span class="mobile-label">Display Status</span>
+          <input type="text" class="form-control" name="displayStatus" [(ngModel)]="element.displayStatus" />
         </td>
       </ng-container>
 
@@ -28,7 +30,8 @@
       <ng-container matColumnDef="fieldValue">
         <th mat-header-cell *matHeaderCellDef> Field Value </th>
         <td mat-cell *matCellDef="let element">
-          <input type="text" class="form-control"  [(ngModel)]="element.fieldValue"/>
+          <span class="mobile-label">Field Value</span>
+          <input type="text" class="form-control" [(ngModel)]="element.fieldValue" />
         </td>
       </ng-container>
 
@@ -36,6 +39,7 @@
       <ng-container matColumnDef="icon">
         <th mat-header-cell *matHeaderCellDef> Icon </th>
         <td mat-cell *matCellDef="let element">
+          <span class="mobile-label">Icon</span>
           <icon-selector id="icon" name="icon" [(value)]="element.matIcon"></icon-selector>
         </td>
       </ng-container>
@@ -47,7 +51,7 @@
           <button aria-label="Delete Row" class="btn btn-clean">
             <i title="Delete Row" c8y-icon="delete" class="dlt-c8y-icon-delete" (click)="deleteRow(i)"></i>
           </button>
-          <button  class="btn btn-clean" aria-label="Insert New Row">
+          <button class="btn btn-clean" aria-label="Insert New Row">
             <i title="Insert New Row" c8y-icon="add-new" class="dlt-c8y-icon-add-new" (click)="addNewRow(i)"></i>
           </button>
         </td>
